--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
+    "react-toastify": "^9.1.2",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
