--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-toastify": "^9.1.2",
-    "tailwind-scrollbar-hide": "^1.1.7"
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tw-elements": "^1.0.0-beta2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
